add PUT function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,13 @@
         <input type="text" placeholder="Quality of Life Index" name="qolindex">
         <button type="submit">Submit</button>
     </form>
+    <div>
+        <h2>In Native Swiss</h2>
+        <p>
+          Replace the first countries quote with 'Der Suisse'
+        </p>
+        <button id="update-button">Replace</button>
+      </div>
     <h2>Countries</h2>
     <ul class="countries">
     <!-- Loop through countries -->
@@ -25,5 +32,6 @@
         </li>
     <% } %>
     </ul>
+    <script src="/main.js"></script>
 </body>
 </html>
