add DELETE function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,15 @@
           Replace the first countries quote with 'Der Suisse'
         </p>
         <button id="update-button">Replace</button>
-      </div>
+    </div>
+    <div>
+        <h2>Annex Country</h2>
+        <p>
+          This country and its history will be removed from the record.
+        </p>
+        <button id="delete-button">She gone</button>
+    </div>
+    <div id="message"></div>
     <h2>Countries</h2>
     <ul class="countries">
     <!-- Loop through countries -->
